feat: 채팅방 가입과 메시지 조회 api 분리